Use String.formatted() instead of String.format()
Modernizer is pointing out a more modern alternative, use it.

Change-Id: I7c1ad34a3318128db59659d20cdcb5c5cdb113b2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>